fix issue with menu button sometimes not locking screen on mobnile. fixed minor styling inconsistencies between light and dark modes

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -73,7 +73,6 @@ a {
 .footer-link-light {
 	@extend .footer-link;
 	&:hover {
-		background-color: white;
 		border: 0.125rem solid $primary;
 	}
 }
@@ -85,5 +84,3 @@ a {
 		transform: scale(1.05);
 	}
 }
-
-
